<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">description_post_author_avatar</string>
    <string name="description_post_menu">description_post_menu</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="views">Views</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="content_edit">Content Edit</string>
    <string name="cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="user_published_new_post">User %1$s published new post:</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="menu_refresh">Menu refresh</string>
    <string name="post_not_load">Post doesn\'t load on Server</string>
    <string name="new_posts">New posts</string>
    <string name="clear">Clear</string>
    <string name="photo_error">Error</string>
    <string name="feed_title">Feed</string>
    <string name="new_post_title">New post</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="registration">Sign up</string>
    <string name="registration_but">Sign up</string>
    <string name="picture_title">Picture</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="exit_app">Application exit</string>
    <string name="guest">Continue as a guest</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="log_account">Log into your account</string>
    <string name="login_text">Login</string>
    <string name="name">Name and Surname</string>
    <string name="password">Password</string>
    <string name="return_password">Return password</string>
    <string name="enter_in_app">Log into your account to use the application</string>
    <string name="sign_in_error">Wrong login or password</string>
    <string name="pass_check">Password mismatch</string>
    <string name="reg_check">All fields must be filled in to register</string>
    <string name="reg_ok">Profile created successfully</string>
    <string name="avatar">Avatar</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="login_success">You are logged in</string>
    <string name="login_exit">You are logged out</string>
    <string name="choose">Choose a source for avatar</string>
    <string name="unknown_item_type">Unknown item type</string>
    <string name="unknown_view_type">Unknown view type</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last week</string>

</resources>