<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/indent_count"
    tools:context=".activity.SignUpFragment">

    <FrameLayout
        android:id="@+id/preview_avatar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indent_count"
        app:layout_constraintBottom_toTopOf="@+id/nameLayout">

        <ImageView
            android:id="@+id/preview_avatar"
            android:layout_width="@dimen/photo_avatar"
            android:layout_height="@dimen/photo_avatar"
            android:layout_gravity="center"
            android:contentDescription="@string/title_choose_image_provider"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/clearBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/clear" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indent_count"
        app:layout_constraintBottom_toTopOf="@id/loginUpLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indent_count"
        app:layout_constraintBottom_toTopOf="@id/passwordUpLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_text"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indent_count"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/returnPasswordUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/indent_count"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/passwordUpLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/returnPasswordUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/return_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registrationBut"
        style="?attr/materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_but"
        app:layout_constraintEnd_toEndOf="@id/returnPasswordUpLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/returnPasswordUpLayout" />

    <Button
        android:id="@+id/avatarBut"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatar"
        app:icon="@drawable/ic_add_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@id/returnPasswordUpLayout"
        app:layout_constraintTop_toBottomOf="@id/returnPasswordUpLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>